fix: 기술 스택 text align 수정

--- a/responsive.css
+++ b/responsive.css
@@ -119,13 +119,13 @@ padding-top: 20px;
     bottom: 20px;
     /* right: 0px; */
     left: 110px;
-    position: absolute;
 }
 
 .techStackContainer {
     display: flex;
     padding: 60px 24px;
     flex-direction: column;
+    align-items: flex-start;
 }
 
 
@@ -150,6 +150,7 @@ padding-top: 20px;
     font-weight: 400;
     line-height: 150%; /* 21px */
     padding-bottom: 40px;
+    text-align: left;
 }
 
 .techImages1 {
